@@ -3,8 +3,7 @@ module Sequel
     COMMA_SEPARATOR = ', '.freeze
     COUNT_OF_ALL_AS_COUNT = SQL::Function.new(:count, LiteralString.new('*'.freeze)).as(:count)
     ARRAY_ACCESS_ERROR_MSG = 'You cannot call Dataset#[] with an integer or with no arguments.'.freeze
-    MAP_ERROR_MSG = 'Using Dataset#map with an argument and a block is not allowed'.freeze
-    GET_ERROR_MSG = 'must provide argument or block to Dataset#get, not both'.freeze
+    ARG_BLOCK_ERROR_MSG = 'Must use either an argument or a block, not both'.freeze
     IMPORT_ERROR_MSG = 'Using Sequel::Dataset#import an empty column array is not allowed'.freeze
 
     # Returns the first record matching the conditions. Examples:
@@ -74,7 +73,7 @@ module Sequel
     #   ds.get{|o| o.sum(:id)}
     def get(column=nil, &block)
       if column
-        raise(Error, GET_ERROR_MSG) if block
+        raise(Error, ARG_BLOCK_ERROR_MSG) if block
         select(column).single_value
       else
         select(&block).single_value
@@ -154,7 +153,7 @@ module Sequel
     #   ds.map{|r| r[:id] * 2} => [2, 4, 6, ...]
     def map(column=nil, &block)
       if column
-        raise(Error, MAP_ERROR_MSG) if block
+        raise(Error, ARG_BLOCK_ERROR_MSG) if block
         super(){|r| r[column]}
       else
         super(&block)
@@ -195,6 +194,32 @@ module Sequel
       end
     end
     
+    def select_hash(key_column, value_column)
+      select(key_column, value_column).to_hash(hash_key_symbol(key_column), hash_key_symbol(value_column))
+    end
+
+    def select_map(column=nil, &block)
+      ds = naked.ungraphed
+      ds = if column
+        raise(Error, ARG_BLOCK_ERROR_MSG) if block
+        ds.select(column)
+      else
+        ds.select(&block)
+      end
+      ds.map{|r| r.values.first}
+    end
+
+    def select_order_map(column=nil, &block)
+      ds = naked.ungraphed
+      ds = if column
+        raise(Error, ARG_BLOCK_ERROR_MSG) if block
+        ds.select(column).order(unaliased_identifier(column))
+      else
+        ds.select(&block).order(&block)
+      end
+      ds.map{|r| r.values.first}
+    end
+
     # Returns the first record in the dataset.
     def single_record
       clone(:limit=>1).each{|r| return r}
@@ -204,7 +229,7 @@ module Sequel
     # Returns the first value of the first record in the dataset.
     # Returns nil if dataset is empty.
     def single_value
-      if r = naked.clone(:graph=>false).single_record
+      if r = naked.ungraphed.single_record
         r.values.first
       end
     end
@@ -243,6 +268,15 @@ module Sequel
     end
 
     private
+
+    # Return a plain symbol given a potentially qualified or aliased symbol,
+    # specifying the symbol that is likely to be used as the hash key
+    # for the column when records are returned.
+    def hash_key_symbol(s)
+      raise(Error, "#{s.inspect} is not a symbol") unless s.is_a?(Symbol)
+      _, c, a = split_symbol(s)
+      (a || c).to_sym
+    end
 
     # Return the unaliased part of the identifier.  Handles both
     # implicit aliases in symbols, as well as SQL::AliasedExpression
