@@ -1,5 +1,7 @@
 === HEAD
 
+* Add Dataset #select_map, #select_order_map, and #select_hash (jeremyevans)
+
 * Make Dataset#group_and_count handle arguments other than Symbols (jeremyevans)
 
 * Add :only_if_modified option to validates_unique method in validation_helpers plugin (jeremyevans)
